Website Deployment bug fix

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Hyght.github.io/JMStudio",
+  "homepage": "https://jmstudio.uk",
   "name": "jmstudio", 
   "version": "0.1.0",
   "private": true,
